samples/_failures_safe/1761607441_478e49_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bd893cc0.c: In function ‘main’:
./samples/SAFE/__tmp_bd893cc0.c:144:5: error: expected declaration or statement at end of input
  144 |     getchar();
      |     ^~~~~~~
